# SendService

./: .coveragerc  .gitignore  .mypy.ini  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.local.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: setup.yml
src/app/: main.py
src/app/application/common/: exceptions.py
src/app/application/common/exceptions/: base.py  ports.py
src/app/application/common/factories/: user.py
src/app/application/common/ports/: flusher.py  user_dto.py  user_gateway.py
src/app/application/use_cases/: sign_up.py
src/app/bootstrap/: configs.py
src/app/bootstrap/entrypoints/: api.py
src/app/bootstrap/ioc/: application.py  config.py  containers.py  converters.py  domain.py  infrastructure.py
src/app/domain/common/: entity.py  exceptions.py  value_objects.py
src/app/domain/entities/: campaign.py  contact.py  delivery_log.py  message_template.py  subscriber.py  user.py
src/app/domain/exceptions/: user.py
src/app/domain/ports/: password_hasher.py
src/app/domain/services/: campaign_service.py
src/app/domain/shared/: channel.py  user_role.py
src/app/domain/value_objects/: campaign_id.py  contact.py  contact_id.py  delivery_log_id.py  message_template_id.py  raw_password.py  subscriber_id.py  user_id.py  user_password_hash.py  username.py
src/app/infrastructure/adapters/: password_hasher_bcrypt.py
src/app/infrastructure/db/: flusher_sqla.py  transaction_manager_sqla.py  uow.py  user_gateway.py
src/app/presentation/api/: root.py
tests/: test_health.py
(+13 files in other folders)
