[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "SendService"
version = "0.1"
readme = "README.md"
license = { text = "Apache-2.0" }
description = "FastAPI project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "alembic>=1.16.5",
    "sqlalchemy>=2.0.43",
    "psycopg[binary]",
    "python-dotenv",
    "dishka",
    "bcrypt"
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "nox==2025.05.01",
    "slotscheck",
    "pympler"
]
